--- a/index.html
+++ b/index.html
@@ -1,39 +1,118 @@
+<!DOCTYPE html>
+<html>
 
-  <html>
-    <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
-    </head>
-    <body>
-      <button id="changeColor"></button>
-	      <li>
+<head>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/toogle.css">
+</head>
 
+<body>
+	<style>
+		.btn {
+			font-size: 10px;
+			padding: 0px 33px;
+		}
+@font-face {
+  font-family: 'Product';
+  src: url('fonts/pdt.ttf')  format('truetype'); /* Safari, Android, iOS */
+    
+}
+		.container {
+			max-height: 600px;
+			min-height: 300px;
+			width: 250px;
+			color: white !important;
+			border: 2px solid rgba(0, 0, 0, 0.3);
+			border-radius: 2px;
+			background: rgb(15, 15, 15, 0.83);
+		}
 
+		body {
+			font-family: Product;
+			font-size: 10px;
+			background-color: transparent;
+		}
 
-            <button id="jsOff" class="btn btn-small" title="Turn off Javascript"> <img src="icons/icon.png" style="width: 20px;"></button>
-            <button id="jsOn" class="btn btn-small" title="Turn On Javascript" style="display: none;"><img src="icons/icon.png" style="width: 20px;filter: grayscale(100%)"> </button>
+		#status {
+			/* avoid an excessively wide status text */
+			white-space: pre;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			max-width: 400px;
+		}
 
-          </li>
-          <li>
-            <button id="micOff" class="btn btn-small" title="Turn off Microphone"> <img src="icons/icon.png" style="width: 20px;"></button>
-            <button id="micOn" class="btn btn-small" title="Turn On Microphone" style="display: none;"><img src="icons/icon.png" style="width: 20px;filter: grayscale(100%)"> </button>
+		.patient-list {
+			max-height: 250px;
+			overflow-y: scroll;
+			overflow-x: hidden;
+			max-width: 100%;
+		}
 
-          </li>
-          <li>
-            <button id="locOff" class="btn btn-small" title="Turn off Location"> <img src="icons/icon.png" style="width: 20px;"></button>
-            <button id="locOn" class="btn btn-small" title="Turn On Location" style="display: none;"><img src="icons/icon.png" style="width: 20px; filter: grayscale(100%)"> </button>
+		li {
+			list-style-type: none;
+		}
 
-          </li>
-          <li>
-            <button id="camOff" class="btn btn-small" title="Turn off Camera"> <img src="icons/icon.png" style="width: 20px;"></button>
-            <button id="camOn" class="btn btn-small" title="Turn On Camera" style="display: none;"><img src="icons/icon.png" style="width: 20px;filter: grayscale(100%)"> </button>
+		.textLabel {
+			margin: auto;
+		}
 
-          </li>
-    </body>
-	  <script src="event.js"></script>
-  </html>
+		.toggle.ios,
+		.toggle-on.ios,
+		.toggle-off.ios {
+			border-radius: 20px;
+		}
+
+		.toggle.ios .toggle-handle {
+			border-radius: 20px;
+		}
+	</style>
+	<div class="container">
+		<p id="status"></p>
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>JavaScript</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventJS" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>Cookies</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventCook" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>Microphone</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventMic" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>Camera</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventCam" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>Location</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventLoc" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+		<div class="row">
+			<div class="col-xs-6 textLabel">
+				<h5>PopUps</h5>
+			</div>
+			<div class="col-xs-6"><input id="toggle-eventPop" type="checkbox" data-toggle="toggle" data-on="Off" data-off="On" data-style="ios" data-offstyle="success" data-onstyle="danger" data-width="70" data-height="15"></div>
+		</div><br>
+		
+	</div>
+	<script src="/scripts/jquery.min.js" type="text/javascript"></script>
+	<script src="event.js"></script>
+	<script src="/scripts/extension.js" type="text/javascript"></script>
+	<script src="scripts/toggle.js"></script>
+
+	<script></script>
+</body>
+
+</html>
