Style added and Edited

--- a/index.html
+++ b/index.html
@@ -4,68 +4,11 @@
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/toogle.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<style>
-		.btn {
-			font-size: 10px;
-			padding: 0px 33px;
-		}
-@font-face {
-  font-family: 'Product';
-  src: url('fonts/pdt.ttf')  format('truetype'); /* Safari, Android, iOS */
-    
-}
-		.container {
-			max-height: 600px;
-			min-height: 300px;
-			width: 250px;
-			color: white !important;
-			border: 2px solid rgba(0, 0, 0, 0.3);
-			border-radius: 2px;
-			background: rgb(15, 15, 15, 0.83);
-		}
-
-		body {
-			font-family: Product;
-			font-size: 10px;
-			background-color: transparent;
-		}
-
-		#status {
-			/* avoid an excessively wide status text */
-			white-space: pre;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			max-width: 400px;
-		}
-
-		.patient-list {
-			max-height: 250px;
-			overflow-y: scroll;
-			overflow-x: hidden;
-			max-width: 100%;
-		}
-
-		li {
-			list-style-type: none;
-		}
-
-		.textLabel {
-			margin: auto;
-		}
-
-		.toggle.ios,
-		.toggle-on.ios,
-		.toggle-off.ios {
-			border-radius: 20px;
-		}
-
-		.toggle.ios .toggle-handle {
-			border-radius: 20px;
-		}
-	</style>
+	
 	<div class="container">
 		<p id="status"></p>
 		<div class="row">
