--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		
 	</div>
 	<script src="/scripts/jquery.min.js" type="text/javascript"></script>
-	<script src="event.js"></script>
+	<script src="/scripts/event.js"></script>
 	<script src="/scripts/extension.js" type="text/javascript"></script>
 	<script src="scripts/toggle.js"></script>
 
