--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/toogle.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
 	
 	<div class="container">
 		<p id="status"></p>
+		<p class="title">Browser Control</p>
+		<hr>
 		<div class="row">
 			<div class="col-xs-6 textLabel">
 				<h5>JavaScript</h5>
